# django-pgcli

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/django_pgcli/: __init__.py
src/django_pgcli5/: __init__.py
tests/: test_django-pgcli.py
